# specnut

./: .gitignore  CLAUDE.md  README.md  example-verbose-spec.digest.md  example-verbose-spec.md  main.py  pyproject.toml  speckit_integration.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specnut/: __init__.py  __main__.py
specnut/cli/: __init__.py  commands.py  exit_codes.py  styles.py
specnut/core/: __init__.py  huffman.py  optimizer.py  parser.py  tokenizer.py
specnut/integrations/: __init__.py  speckit.py
specnut/models/: __init__.py  digest.py  metrics.py  optimization.py  specification.py
tests/: __init__.py
tests/contract/: __init__.py  test_batch_options.py  test_cli_commands.py  test_digest_command.py  test_metrics_command.py  test_output_formats.py
tests/integration/: test_batch_processing.py  test_digest_generation.py  test_metrics.py  test_speckit_integration.py
tests/unit/: __init__.py  test_batch_models.py  test_huffman.py  test_parser.py
